beispiel-2-db-anwendung/kubernetes/011-logger-postgres-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
  namespace: logger

spec:
  replicas: 1
  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
      - name: postgres
        image: postgres:9.6
        ports:
        - containerPort: 5432
          name: postgres
          protocol: TCP

        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres

      volumes:
      - name: postgres
        persistentVolumeClaim:
          claimName: postgres
