beispiel-2-db-anwendung/kubernetes/021-logger-app-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
  namespace: logger

spec:
  replicas: 1
  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: app

  template:
    metadata:
      labels:
        app: app

    spec:
      containers:
      - name: app
        image: mazdermind/request-logger:v1

        ports:
        - containerPort: 5000
          name: web
          protocol: TCP
