beispiel-2-db-anwendung/kubernetes/012-logger-postgres-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  labels:
    app: postgres
  namespace: logger

spec:
  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      protocol: TCP
